--- a/index.html
+++ b/index.html
@@ -5,45 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fiesta Homes Landing Page</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    header {
-      background-color: #ff6f00;
-      color: white;
-      padding: 30px 20px;
-      text-align: center;
-    }
-    main {
-      padding: 20px;
-      max-width: 1000px;
-      margin: auto;
-      text-align: center;
-    }
-    h1, h2 {
-      margin-bottom: 20px;
-    }
-    .embed-container {
-      margin: 30px 0;
-      width: 100%;
-      max-width: 900px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    iframe {
-      width: 100%;
-      height: 600px;
-      border: none;
-    }
-    @media (max-width: 768px) {
-      iframe {
-        height: 500px;
-      }
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; color: #333; }
+    header { background-color: #ff6f00; color: white; padding: 20px; text-align: center; }
+    main { padding: 20px; max-width: 900px; margin: auto; text-align: center; }
+    h1, h2 { text-align: center; }
+    iframe { border: none; width: 100%; max-width: 800px; height: 600px; margin-top: 20px; }
   </style>
 </head>
 <body>
@@ -55,16 +21,7 @@
 
 <main>
   <h2>Request More Information</h2>
-  <div class="embed-container">
-    <!-- Typeform Embed -->
-    <iframe src="https://form.typeform.com/to/xRWyDpcN" allow="camera; microphone; autoplay; encrypted-media;"></iframe>
-  </div>
-
-  <h2>Schedule a Visit</h2>
-  <div class="embed-container">
-    <!-- Google Calendar Embed -->
-    <iframe src="https://calendar.google.com/calendar/embed?src=lreynosa%40fiestahomesodessa.com&ctz=America%2FChicago"></iframe>
-  </div>
+  <iframe src="https://form.typeform.com/to/xRWyDpcN" height="500" width="900" allow="camera; microphone; autoplay; encrypted-media;"></iframe>
 </main>
 
 </body>
